# sudoku

./: .gitignore  CMakeLists.txt
src/app/: app.cpp  app.h
src/config/: config.cpp  config.h
src/game/: game.cpp  game.h
src/game/generator/: generator.cpp  generator.h
src/view/: input_number_popup.cpp  input_number_popup.h  main_frame.cpp  main_frame.h
src/view/draw_board/: draw_board.cpp  draw_board.h
src/view/menu/: main_menu.cpp  main_menu.h
